[package]
name = "libwebview"
version = "0.1.0"
edition = "2021"

[lib]
name = "WebView"
crate-type = ["cdylib"]

[dependencies]
wry = { git = "https://github.com/syrel/wry", rev = "3a0dce03e3acc300c27bc1adcd3474e8e3bcb2fe" }
raw-window-handle-extensions = "0.6"
env_logger = "0.11"
anyhow = "1.0"
value-box = { version = "2.3", features = ["anyhow"] }
string-box = "1.1"
value-box-ffi = { version = "1", features = ["string-box"] }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies.gtk]
version = "0.18"

[target."cfg(target_os = \"windows\")".dependencies.webview2-com]
version = "0.37"

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.61"
features = [ "Win32_System_Com", "Win32_UI_Input_KeyboardAndMouse" ]